--- a/src/components/ProductsList.css
+++ b/src/components/ProductsList.css
@@ -65,6 +65,10 @@
     font-weight: bold;
     color: #151b39;
     overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .products-mkt {
